<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="_0_00">0.00</string>
    <string name="num_of_pax">Num of pax</string>
    <string name="_0">0</string>
    <string name="no_sys">no sys</string>
    <string name="svs">svs</string>
    <string name="no_gst">no gst</string>
    <string name="gst">gst</string>
    <string name="discount">Discount(%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">Paynow</string>
    <string name="split">Split</string>
    <string name="reset">RESET</string>
    <string name="togglebutton">ToggleButton</string>
</resources>